// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DInput component renders correctly with custom marginTopRatio 1`] = `
<TextInput
  marginTopRatio={2}
  placeholderTextColor="#A3ACB8"
  style={
    [
      {
        "borderColor": "#0071F3",
        "borderRadius": 15,
        "borderWidth": 1,
        "fontFamily": "Inter-Medium",
        "fontSize": 15,
        "marginTop": 13.34,
        "padding": 30,
        "width": "100%",
      },
      undefined,
    ]
  }
/>
`;

exports[`DInput component renders correctly with default props 1`] = `
<TextInput
  placeholderTextColor="#A3ACB8"
  style={
    [
      {
        "borderColor": "#0071F3",
        "borderRadius": 15,
        "borderWidth": 1,
        "fontFamily": "Inter-Medium",
        "fontSize": 15,
        "marginTop": 6.67,
        "padding": 30,
        "width": "100%",
      },
      undefined,
    ]
  }
/>
`;
